--- a/faq.html
+++ b/faq.html
@@ -36,7 +36,7 @@
     .faq-container {
       max-width: 800px;
       margin: 0 auto;
-      padding: 0 16px 28px;
+      padding: 0 16px 100px; /* espace bas pour le bouton flottant */
     }
     .faq-item {
       background:#fff;
@@ -44,6 +44,7 @@
       border-radius:12px;
       padding:16px;
       margin-bottom:16px;
+      box-shadow:0 2px 6px rgba(0,0,0,.04);
     }
     .faq-item h2 {
       font-size: 1.05rem;
@@ -56,26 +57,44 @@
       line-height:1.5;
     }
 
+    /* Bouton flottant noir */
     .btn-black{
-      display:inline-block;
-      padding:12px 22px;
+      position:fixed;
+      bottom:22px;
+      right:22px;
       background-color: var(--brand);
       color:#fff;
       border:1px solid var(--brand);
       border-radius:9999px;
-      text-decoration:none;
+      padding:14px 24px;
       font-weight:700;
-      transition:opacity .25s, transform .2s;
+      font-size:15px;
+      text-decoration:none;
       cursor:pointer;
+      transition:opacity .25s, transform .25s, box-shadow .25s;
+      box-shadow:0 6px 18px rgba(0,0,0,.25);
+      z-index:100;
     }
-    .btn-black:hover{opacity:.9; transform:translateY(-1px)}
-    .back-wrap{ text-align:center; margin:30px 0 40px; }
+    .btn-black:hover{
+      opacity:.9;
+      transform:translateY(-2px);
+      box-shadow:0 8px 22px rgba(0,0,0,.35);
+    }
 
     footer{
       font-size:13px;
       color:#777;
       text-align:center;
       padding:18px 12px 28px;
+    }
+
+    @media (max-width:600px){
+      .btn-black{
+        right:12px;
+        bottom:12px;
+        padding:12px 18px;
+        font-size:14px;
+      }
     }
   </style>
 </head>
@@ -112,11 +131,10 @@
       <h2>📍 Quels lieux desservez-vous ?</h2>
       <p>Nous desservons Perpignan et sa région : Canet, Argelès, Le Barcarès, Narbonne, aéroports et gares régionales.</p>
     </div>
-
-    <div class="back-wrap">
-      <button id="btnRetour" class="btn-black">⬅️ Retour</button>
-    </div>
   </main>
+
+  <!-- Bouton flottant -->
+  <button id="btnRetour" class="btn-black">⬅️ Retour à l’accueil</button>
 
   <footer>© 2025 OuassVTC - Tous droits réservés.</footer>
 
