--- a/services.html
+++ b/services.html
@@ -5,33 +5,102 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nos services - OuassVTC</title>
   <style>
+    :root{
+      --brand:#000;
+      --border:#e5e7eb;
+      --bg:#f5f5f5;
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-color: var(--bg);
       color: #333;
       margin: 0;
-      padding: 20px;
+      padding: 0;
     }
+
+    header{
+      background:#000;
+      color:#fff;
+      text-align:center;
+      padding:24px 16px;
+    }
+    header img{max-height:90px;height:auto;width:auto}
+
     h1 {
       text-align: center;
-      margin-bottom: 30px;
+      margin: 26px 0 18px;
+      font-size: 1.6rem;
     }
+
     .services-container {
       max-width: 800px;
-      margin: auto;
+      margin: 0 auto;
+      padding: 0 16px 100px; /* espace pour bouton flottant */
     }
+
     h2 {
       color: #000;
-      margin-top: 20px;
+      margin-top: 22px;
+      font-size:1.15rem;
     }
+
     p {
       margin-bottom: 15px;
+      color:#555;
+      line-height:1.5;
+    }
+
+    /* Bouton flottant noir */
+    .btn-black{
+      position:fixed;
+      bottom:22px;
+      right:22px;
+      background-color: var(--brand);
+      color:#fff;
+      border:1px solid var(--brand);
+      border-radius:9999px;
+      padding:14px 24px;
+      font-weight:700;
+      font-size:15px;
+      text-decoration:none;
+      cursor:pointer;
+      transition:opacity .25s, transform .25s, box-shadow .25s;
+      box-shadow:0 6px 18px rgba(0,0,0,.25);
+      z-index:100;
+    }
+    .btn-black:hover{
+      opacity:.9;
+      transform:translateY(-2px);
+      box-shadow:0 8px 22px rgba(0,0,0,.35);
+    }
+
+    footer{
+      font-size:13px;
+      color:#777;
+      text-align:center;
+      padding:18px 12px 28px;
+    }
+
+    @media (max-width:600px){
+      .btn-black{
+        right:12px;
+        bottom:12px;
+        padding:12px 18px;
+        font-size:14px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Nos services</h1>
-  <div class="services-container">
+
+  <header>
+    <img src="ouassvtc.png" alt="OuassVTC">
+  </header>
+
+  <main class="services-container">
+    <h1>Nos services</h1>
+
     <h2>🚖 Transferts aéroports & gares</h2>
     <p>OuassVTC vous conduit en toute sérénité vers les aéroports et gares de la région, avec ponctualité et professionnalisme.</p>
 
@@ -46,12 +115,23 @@
 
     <h2>💳 Paiement simplifié</h2>
     <p>Paiement en espèces, carte bancaire ou mobile. Tarifs fixés à l’avance, pas de surprise.</p>
-  </div>
-  <div style="text-align:center; margin-top: 40px;">
-  <a href="index.html" style="display:inline-block; padding:10px 20px; background-color:#007bff; color:white; border-radius:5px; text-decoration:none; font-weight:bold;">
-    ⬅️ Retour à l'accueil
-  </a>
-</div>
+  </main>
+
+  <!-- Bouton flottant -->
+  <button id="btnRetour" class="btn-black">⬅️ Retour à l’accueil</button>
+
+  <footer>© 2025 OuassVTC - Tous droits réservés.</footer>
+
+  <script>
+    // Bouton dynamique : retour ou redirection
+    document.getElementById("btnRetour").addEventListener("click", function(){
+      if (document.referrer && document.referrer !== window.location.href) {
+        window.history.back();
+      } else {
+        window.location.href = "index.html";
+      }
+    });
+  </script>
 
 </body>
 </html>
