--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -1,54 +1,133 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Qui sommes-nous - OuassVTC</title>
+  <title>À propos - OuassVTC</title>
   <style>
+    :root{
+      --brand:#000;
+      --border:#e5e7eb;
+      --bg:#f5f5f5;
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-color: var(--bg);
       color: #333;
       margin: 0;
-      padding: 20px;
+      padding: 0;
     }
+
+    header{
+      background:#000;
+      color:#fff;
+      text-align:center;
+      padding:24px 16px;
+    }
+    header img{max-height:90px;height:auto;width:auto}
+
     h1 {
       text-align: center;
-      margin-bottom: 30px;
+      margin: 26px 0 18px;
+      font-size: 1.6rem;
     }
+
     .about-container {
       max-width: 800px;
-      margin: auto;
+      margin: 0 auto;
+      padding: 0 16px 100px; /* espace bas pour le bouton flottant */
     }
+
     p {
       margin-bottom: 20px;
       line-height: 1.6;
+      color:#555;
+    }
+
+    /* Bouton flottant noir */
+    .btn-black{
+      position:fixed;
+      bottom:22px;
+      right:22px;
+      background-color: var(--brand);
+      color:#fff;
+      border:1px solid var(--brand);
+      border-radius:9999px;
+      padding:14px 24px;
+      font-weight:700;
+      font-size:15px;
+      text-decoration:none;
+      cursor:pointer;
+      transition:opacity .25s, transform .25s, box-shadow .25s;
+      box-shadow:0 6px 18px rgba(0,0,0,.25);
+      z-index:100;
+    }
+    .btn-black:hover{
+      opacity:.9;
+      transform:translateY(-2px);
+      box-shadow:0 8px 22px rgba(0,0,0,.35);
+    }
+
+    footer{
+      font-size:13px;
+      color:#777;
+      text-align:center;
+      padding:18px 12px 28px;
+    }
+
+    @media (max-width:600px){
+      .btn-black{
+        right:12px;
+        bottom:12px;
+        padding:12px 18px;
+        font-size:14px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Qui sommes-nous ?</h1>
-  <div class="about-container">
+
+  <header>
+    <img src="ouassvtc.png" alt="OuassVTC">
+  </header>
+
+  <main class="about-container">
+    <h1>À propos</h1>
+
     <p>
       Chez <strong>OuassVTC</strong>, nous sommes spécialisés dans le transport de personnes à Perpignan et sa région. 
-      Fort de plus de 10 ans d'expérience dans le domaine, nous mettons un point d'honneur à offrir un service fiable, ponctuel, sécurisé et respectueux de nos clients.
+      Forts de plus de 10 ans d'expérience dans le domaine, nous mettons un point d'honneur à offrir un service fiable, ponctuel, sécurisé et respectueux de nos clients.
     </p>
+
     <p>
-      Nous croyons que chaque trajet compte. C’est pourquoi notre engagement repose sur la qualité de l’accueil, la propreté des véhicules, la courtoisie de nos chauffeurs, et le respect total de vos horaires.
+      Nous croyons que chaque trajet compte. C’est pourquoi notre engagement repose sur la qualité de l’accueil, la propreté des véhicules, la courtoisie de nos chauffeurs et le respect total de vos horaires.
     </p>
+
     <p>
-      Notre mission est simple : faciliter vos déplacements avec professionnalisme, que ce soit pour un rendez-vous personnel, un déplacement professionnel, ou un transfert vers une gare ou un aéroport.
+      Notre mission est simple : faciliter vos déplacements avec professionnalisme, que ce soit pour un rendez-vous personnel, un déplacement professionnel ou un transfert vers une gare ou un aéroport.
     </p>
+
     <p>
-      Réserver avec OuassVTC, c’est faire le choix d’un chauffeur à l’écoute, expérimenté, et toujours prêt à répondre à vos besoins.
+      Réserver avec OuassVTC, c’est faire le choix d’un chauffeur à l’écoute, expérimenté et toujours prêt à répondre à vos besoins.
     </p>
-  </div>
-  <div style="text-align:center; margin-top: 40px;">
-  <a href="index.html" style="display:inline-block; padding:10px 20px; background-color:#007bff; color:white; border-radius:5px; text-decoration:none; font-weight:bold;">
-    ⬅️ Retour à l'accueil
-  </a>
-</div>
+  </main>
+
+  <!-- Bouton flottant -->
+  <button id="btnRetour" class="btn-black">⬅️ Retour à l’accueil</button>
+
+  <footer>© 2025 OuassVTC - Tous droits réservés.</footer>
+
+  <script>
+    // Bouton dynamique : retour ou redirection
+    document.getElementById("btnRetour").addEventListener("click", function(){
+      if (document.referrer && document.referrer !== window.location.href) {
+        window.history.back();
+      } else {
+        window.location.href = "index.html";
+      }
+    });
+  </script>
 
 </body>
 </html>
